--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "raw-loader": "^4.0.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-markdown": "^4.3.1"
+    "react-markdown": "^4.3.1",
+    "sass": "^1.26.11"
   },
   "devDependencies": {
     "@types/node": "^14.11.2",
