--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "lint:fix": "eslint --fix './**/*.{ts,tsx}'"
   },
   "dependencies": {
-    "gray-matter": "^4.0.2",
+    "@mdx-js/loader": "^1.6.18",
+    "@next/mdx": "^9.5.3",
     "js-yaml": "^3.14.0",
     "next": "9.5.3",
     "next-seo": "^4.11.0",
     "raw-loader": "^4.0.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-markdown": "^4.3.1",
+    "react-twitter-embed": "^3.0.3",
     "sass": "^1.26.11"
   },
   "devDependencies": {
