--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "react-twitter-embed": "^3.0.3",
     "rehype-autolink-headings": "^4.0.0",
     "rehype-slug": "^3.0.0",
+    "rehype-toc": "^3.0.2",
     "sass": "^1.26.11"
   },
   "devDependencies": {
+    "@types/js-yaml": "^3.12.5",
     "@types/node": "^14.11.2",
     "@types/react": "^16.9.50",
     "@types/webpack-env": "^1.15.3",
