--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@mapbox/rehype-prism": "^0.5.0",
     "@mdx-js/loader": "^1.6.18",
     "@next/mdx": "^9.5.3",
+    "classnames": "^2.2.6",
+    "dayjs": "^1.9.1",
     "js-yaml": "^3.14.0",
     "next": "9.5.3",
     "next-seo": "^4.11.0",
