--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,9 @@
     "paths": {
       "@/includes/*": ["_includes/*"],
       "@/layouts/*": ["_layouts/*"],
-      "@/posts/*": ["_posts/*"],
+      "@/posts/*": ["_articles/posts/*"],
+      "@/pages/*": ["_articles/pages/*"],
+      "@/drafts/*": ["_articles/drafts/*"],
       "@/api": ["api/index"]
     }
   },
