--- a/package.json
+++ b/package.json
@@ -11,17 +11,17 @@
   },
   "dependencies": {
     "@mapbox/rehype-prism": "^0.5.0",
-    "@mdx-js/loader": "^1.6.18",
+    "@mdx-js/loader": "^2.0.0",
     "@next/mdx": "^9.5.3",
     "classnames": "^2.2.6",
-    "dayjs": "^1.9.1",
+    "dayjs": "^1.10.7",
     "js-yaml": "^3.14.0",
-    "next": "9.5.3",
-    "next-seo": "^4.11.0",
+    "next": "^12.0.10",
+    "next-seo": "^5.1.0",
     "raw-loader": "^4.0.1",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-twitter-embed": "^3.0.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-twitter-embed": "^4.0.4",
     "rehype-autolink-headings": "^4.0.0",
     "rehype-slug": "^3.0.0",
     "rehype-toc": "^3.0.2",
@@ -30,7 +30,7 @@
   "devDependencies": {
     "@types/js-yaml": "^3.12.5",
     "@types/node": "^14.11.2",
-    "@types/react": "^16.9.50",
+    "@types/react": "^17.0.2",
     "@types/webpack-env": "^1.15.3",
     "@typescript-eslint/eslint-plugin": "^4.3.0",
     "@typescript-eslint/parser": "^4.3.0",
@@ -39,6 +39,6 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.3",
     "prettier": "^2.1.2",
-    "typescript": "^4.0.3"
+    "typescript": "^4.5.5"
   }
 }
